--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,7 +43,17 @@ h3 {
   text-align: center;
 }
 
+.footer {
+    display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0;
+  border-bottom: 1px solid #e6e6e6;
+  margin-bottom: 60px;
+}
+
 .header {
+  position: sticky;
   display: flex;
   justify-content: space-between;
   align-items: center;
